Resolved unneccesary white  scroll spacing!

--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -1,3 +1,6 @@
 .first {
   margin-bottom: 30px;
 }
+.landing{
+  width: fit-content;
+}
